Fix styling of clue giver on ios safari

--- a/private/react/Game.scss
+++ b/private/react/Game.scss
@@ -37,10 +37,14 @@
   border-collapse: separate;
 }
 div.controls {
-  height: 15vh;
+  height: 13vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  .score {
+    font-size: 6vw;
+    padding: 2.5vh 4.3vw;
+  }
   button {
     background: #2B2B2B;
     border-radius: 10px;
@@ -64,8 +68,15 @@ div.clue-wrapper {
 }
 .clue-table {
   width: 100%;
-  height: 100%;  
+  height: 100%;
   border-collapse: collapse;
+}
+.clue-giver {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
 .clue {
   text-align: center;
@@ -164,8 +175,8 @@ div.room-id-container {
   font-family: arial;
   color: white;
   font-size: 4vw;
-  margin: auto;
   padding: 1.5vh 2.3vw;
+  margin: auto;
   position: relative;
 }
 .active {
@@ -173,7 +184,7 @@ div.room-id-container {
 }
 .turn {
   text-align: center;
-  width: 20%; 
+  width: 20%;
   font-size: 4vw;
 }
 .turn-one:after, .turn-one:before {
